@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2006,v 1.498 2006/06/13 07:27:03 tonio Exp $
+$NetBSD: CHANGES-2006,v 1.499 2006/06/13 09:58:54 abs Exp $
 
 Changes to the packages collection and infrastructure in 2006:
 
@@ -3029,3 +3029,4 @@ Changes to the packages collection and infrastructure in 2006:
 	Updated inputmethod/uim to 1.1.0 [wiz 2006-06-12]
 	Updated pkgtools/url2pkg to 1.34 [reed 2006-06-12]
 	Updated converters/bibtex2html to 1.82 [tonio 2006-06-13]
+	Updated devel/cpuflags to 1.00 [abs 2006-06-13]
